gitops/clusters/home/canary/canary.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary
  namespace: canary
  labels:
    app.kubernetes.io/name: canary
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: canary
  ports:
    - name: http
      port: 80
      targetPort: http
